--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Amber Studio Project",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon server/index.js",
     "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,6 +26,7 @@
   },
   "homepage": "https://github.com/MediaStudy321/ProjectAmber#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7"
   }
 }
