--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   },
   "homepage": "https://github.com/MediaStudy321/ProjectAmber#readme",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "mongodb": "^3.6.5",
+    "mongoose": "^5.12.3",
     "nodemon": "^2.0.7"
   }
 }
